# BlackSquare

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/com/example/blacksquare/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/nextsoundz/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  AudioEngine.cpp  AudioEngine.h  native-lib.cpp  native-lib.h  natives-lib.cpp
app/src/main/java/com/example/blacksquare/: LoadDialogActivity.kt  LoadDrumSoundDialogActivity.kt  MainActivity.kt  NoteRepeatDialogActivity.kt  SettingsDialogActivity.kt
app/src/main/java/com/example/blacksquare/Api/: LoadApi.kt
app/src/main/java/com/example/nextsoundz/: LoadDrumSoundDialogActivity.kt  MainActivity.kt  NoteRepeatDialogActivity.kt  SettingsDialogActivity.kt
app/src/main/res/anim/: fade_in.xml  pad_scale_in.xml  pad_scale_out.xml  scale_pad.xml
app/src/main/res/drawable/: default_pad.xml  ic_btn_control.xml  ic_button_normal_state.xml  ic_chevron_left.xml  ic_chevron_right.xml  ic_close.xml  ic_control_btn.xml  ic_controls.xml  ic_controls1.xml  ic_expand_less_black_24dp.xml  ic_expand_more_black_24dp.xml  ic_favorite_border_24dp.xml  ic_fiber_manual_record_default.xml  ic_file_download.xml  ic_folder_open.xml  ic_instrument.xml  ic_mixer.xml  ic_mpc.xml  ic_music.xml  ic_music_settings.xml  ic_pause_circle_outline_black_24dp.xml  ic_play_arrow.xml  ic_play_circle_filled.xml  ic_play_circle_outline_black_24dp.xml  ic_pnggurucom.xml  ic_record_default.xml  ic_recording.xml  ic_recording_color.xml  ic_redo.xml  ic_repeat.xml  ic_rotary_knob.xml  ic_sale.xml  ic_save_24dp.xml  ic_search.xml  ic_search_purple_24dp.xml  ic_sequence.xml  ic_settings.xml  ic_settings_applications.xml  ic_settings_input.xml  ic_stop.xml  (+19 more)
app/src/main/res/layout/: activity_dialog_settings_layout.xml  activity_load_drum_sound.xml  activity_main.xml  activity_note_repeat_dialog.xml  drum_bank1.xml  drum_bank2.xml  drum_bank3.xml  drum_fragment_layout.xml  drum_menu_controls.xml  drum_screen_home_fragment_layout.xml  drum_screen_load_kit_layout.xml  edit_menu_view.xml  file_fragment_layout.xml  home_custom_tab.xml  instrument_fragment_layout.xml  item_kit.xml  load_loops_layout.xml  load_sound_layout.xml  load_sound_list_item.xml  main_pattern_controls.xml  main_ui_controls.xml  recording_fragment_layout.xml  rotary_knob_view.xml  sequence_fragment_layout.xml  snackbar_search_kits_tag_layout.xml  snackbar_search_loops_tag_layout.xml  snackbar_search_sound_tag_layout.xml  sound_header_filter_item.xml
app/src/main/res/menu/: main_seekbar_popup_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_speaker_round.xml
app/src/main/res/raw/: sound3
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  strings_main.xml  styles.xml
(+120 files in other folders)
